# Ropet-ASR

./: .gitignore  CMakeLists.txt  README.md
asr-onnx/: alsa-play.cc  alsa-play.h  alsa.cc  alsa.h  asr-cli.cc  audio-tagging-ced-impl.h  audio-tagging-impl.cc  audio-tagging-impl.h  audio-tagging-label-file.cc  audio-tagging-label-file.h  audio-tagging-model-config.cc  audio-tagging-model-config.h  audio-tagging-zipformer-impl.h  audio-tagging.cc  audio-tagging.h  base64-decode.cc  base64-decode.h  bbpe.cc  bbpe.h  cat-test.cc  cat.cc  cat.h  circular-buffer-test.cc  circular-buffer.cc  circular-buffer.h  context-graph-test.cc  context-graph.cc  context-graph.h  cppjieba-test.cc  display.h  endpoint.cc  endpoint.h  fast-clustering-config.cc  fast-clustering-config.h  fast-clustering-test.cc  fast-clustering.cc  fast-clustering.h  features.cc  features.h  file-utils.cc  (+367 more)
asr-onnx/c-api/: c-api.cc
asr-onnx/csrc/: CMakeLists.txt  README.md  alsa-play.cc  alsa-play.h  alsa.cc  alsa.h  asr-cli.cc  audio-tagging-ced-impl.h  audio-tagging-impl.cc  audio-tagging-impl.h  audio-tagging-label-file.cc  audio-tagging-label-file.h  audio-tagging-model-config.cc  audio-tagging-model-config.h  audio-tagging-zipformer-impl.h  audio-tagging.cc  audio-tagging.h  base64-decode.cc  base64-decode.h  bbpe.cc  bbpe.h  cat-test.cc  cat.cc  cat.h  circular-buffer-test.cc  circular-buffer.cc  circular-buffer.h  context-graph-test.cc  context-graph.cc  context-graph.h  cppjieba-test.cc  display.h  endpoint.cc  endpoint.h  fast-clustering-config.cc  fast-clustering-config.h  fast-clustering-test.cc  fast-clustering.cc  fast-clustering.h  features.cc  (+370 more)
asr-onnx/csrc/rknn/: macros.h  online-recognizer-ctc-rknn-impl.h  online-recognizer-transducer-rknn-impl.h  online-stream-rknn.cc  online-stream-rknn.h  online-transducer-decoder-rknn.h  online-transducer-greedy-search-decoder-rknn.cc  online-transducer-greedy-search-decoder-rknn.h  online-transducer-modified-beam-search-decoder-rknn.cc  online-transducer-modified-beam-search-decoder-rknn.h  online-zipformer-ctc-model-rknn.cc  online-zipformer-ctc-model-rknn.h  online-zipformer-transducer-model-rknn.cc  online-zipformer-transducer-model-rknn.h  utils.cc  utils.h
asr-onnx/rknn/: macros.h  online-recognizer-ctc-rknn-impl.h  online-recognizer-transducer-rknn-impl.h  online-stream-rknn.cc  online-stream-rknn.h  online-transducer-decoder-rknn.h  online-transducer-greedy-search-decoder-rknn.cc  online-transducer-greedy-search-decoder-rknn.h  online-transducer-modified-beam-search-decoder-rknn.cc  online-transducer-modified-beam-search-decoder-rknn.h  online-zipformer-ctc-model-rknn.cc  online-zipformer-ctc-model-rknn.h  online-zipformer-transducer-model-rknn.cc  online-zipformer-transducer-model-rknn.h  utils.cc  utils.h
cmake/: onnxruntime-linux-aarch64-gpu.cmake  onnxruntime-linux-aarch64-static.cmake  onnxruntime-linux-aarch64.cmake  onnxruntime-linux-arm-static.cmake  onnxruntime-linux-arm.cmake  onnxruntime-linux-riscv64-static.cmake  onnxruntime-linux-riscv64.cmake  onnxruntime-linux-x86_64-gpu.cmake  onnxruntime-linux-x86_64-static.cmake  onnxruntime-linux-x86_64.cmake  onnxruntime.cmake  openfst.cmake
utils/: onnx_metadata_modify.py  openai-whisper.py
